--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-plugins/net.refractions.udig.*/bin/
-tutorials/net.refractions.udig.tutorials.*/bin/
-plugins/net.refractions.udig.libs/lib/
-plugins/org.tcat.citd.sim.udig.bookmarks/bin/
+plugins/net.refractions.udig.*/bin
+tutorials/net.refractions.udig.tutorials.*/bin
+plugins/net.refractions.udig.libs/lib
+plugins/org.tcat.citd.sim.udig.bookmarks/bin
