--- a/plugins/net.refractions.udig.catalog.postgis/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.postgis/plugin.xml
@@ -8,19 +8,6 @@
             id="postgis"
             name="Postgis"/>
    	</extension>
-  <extension
-       point="net.refractions.udig.catalog.ui.connectionFactory">
-	  <factory 
-	      class="net.refractions.udig.catalog.internal.postgis.ui.PostGisConnectionFactory"
-          id="net.refractions.udig.catalog.ui.postgis"/>
-    <wizardPage
-          banner="icons/wizban/postgis_wiz.gif"
-          class="net.refractions.udig.catalog.internal.postgis.ui.PostGisWizardPage"
-          description="%wizard.description"
-          icon="icons/etool16/postgis_wiz.gif"
-          name="%wizard.name"/>
-
- </extension>
  <extension
        point="net.refractions.udig.catalog.ui.connectionFactory">
     <factory
@@ -32,7 +19,7 @@
           class="net.refractions.udig.catalog.internal.postgis.ui.PostgisUserHostPage"
           description="%wizard.description"
           icon="icons/etool16/postgis_wiz.gif"
-          name="PostGIS Experimental">
+          name="PostGIS">
     </wizardPage>
     <wizardPage
           banner="icons/wizban/postgis_wiz.gif"
