factored out the DatabaseConnectionPage@
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31066 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.postgis/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.postgis/plugin.xml
@@ -23,7 +23,7 @@
     </wizardPage>
     <wizardPage
           banner="icons/wizban/postgis_wiz.gif"
-          class="net.refractions.udig.catalog.internal.postgis.ui.PostgisConnectionPage"
+          class="net.refractions.udig.catalog.service.database.DataConnectionPage"
           description="%wizard.description"
           icon="icons/etool16/postgis_wiz.gif"
           name="Connection">
