--- a/plugins/net.refractions.udig.catalog.mysql/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.mysql/plugin.xml
@@ -2,20 +2,6 @@
 <?eclipse version="3.2"?>
 <plugin>
    <extension
-         point="net.refractions.udig.catalog.ui.connectionFactory">
-      <factory
-            class="net.refractions.udig.catalog.internal.mysql.ui.MySQLuDigConnectionFactory"
-            id="com.iai.udig.catalog.ui.mysql.confac">
-      </factory>
-      <wizardPage
-            banner="icons/wizban/mysql_wiz.png"
-            class="net.refractions.udig.catalog.internal.mysql.ui.MySQLWizardPage"
-            description="%wizard.description"
-            icon="icons/etool16/mysql_wiz.png"
-            name="MySQL ">
-      </wizardPage>
-   </extension>
-   <extension
          point="net.refractions.udig.catalog.ServiceExtension">
       <service
             class="net.refractions.udig.catalog.MySQLServiceExtension"
@@ -27,20 +13,20 @@
          point="net.refractions.udig.catalog.ui.connectionFactory">
       <factory
             class="net.refractions.udig.catalog.internal.mysql.ui.MySQLuDigConnectionFactory"
-            id="com.iai.udig.catalog.mysql.factory.exmeriment">
+            id="com.iai.udig.catalog.mysql.factory">
       </factory>
       <wizardPage
             class="net.refractions.udig.catalog.internal.mysql.ui.MySQLUserHostPage"
             description="%wizard.description"
             icon="icons/etool16/mysql_wiz.png"
-            name="MySQL host Expriment">
+            name="MySQL host">
       </wizardPage>
       <wizardPage
             banner="icons/wizban/mysql_wiz.png"
-            class="net.refractions.udig.catalog.internal.mysql.ui.MySQLConnectionPage"
+            class="net.refractions.udig.catalog.service.database.DataConnectionPage"
             description="%wizard.description"
             icon="icons/etool16/mysql_wiz.png"
-            name="MysQL connection page">
+            name="MySQL connection ">
       </wizardPage>
    </extension>
 
