--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -409,7 +409,9 @@
         <destination
               adapt="true"
               class="net.refractions.udig.project.ILayer"/>
-        <acceptedType class="org.geotools.filter.Filter"/>
+        <acceptedType
+              adapt="true"
+              class="org.opengis.filter.Filter"/>
         <acceptedType class="org.opengis.feature.Feature"/>
         <destination
               adapt="true"
@@ -490,7 +492,6 @@
         <destination
               adapt="false"
               class="net.refractions.udig.project.internal.Project"/>
-        <description/>
         <acceptedType
               adapt="false"
               class="org.eclipse.emf.ecore.EObject"/>
