--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -104,7 +104,8 @@ bin.includes = library.jar,\
                lib/batik-svg-dom-1.6.jar,\
                lib/batik-xml-1.6.jar,\
                lib/batik-awt-util-1.6.jar,\
-               lib/batik-script-1.6.jar
+               lib/batik-script-1.6.jar,\
+               lib/gt-mif-2.6-SNAPSHOT.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
