--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/gt-mif-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-script-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.6.jar"/>
