--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -7,8 +7,31 @@ bin.includes = library.jar,\
                META-INF/,\
                LICENSE.txt,\
                plugin_ko.properties,\
+               lib/imageio-ext-arcgrid-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-customstreams-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdal-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdaldted-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalecw-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalecwjp2-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalerdasimg-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalframework-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalkakadujp2-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalmrsid-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalmrsidjp2-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-gdalnitf-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-imagereadmt-1.0-SNAPSHOT.jar,\
+               lib/batik-awt-util-1.6.jar,\
+               lib/batik-bridge-1.6.jar,\
+               lib/batik-css-1.6.jar,\
+               lib/batik-dom-1.6.jar,\
+               lib/batik-ext-1.6.jar,\
+               lib/batik-gvt-1.6.jar,\
+               lib/batik-parser-1.6.jar,\
+               lib/batik-script-1.6.jar,\
+               lib/batik-svg-dom-1.6.jar,\
                lib/batik-transcoder-1.6.jar,\
                lib/batik-util-1.6.jar,\
+               lib/batik-xml-1.6.jar,\
                lib/beam-1.0.jar,\
                lib/commons-beanutils-1.7.0.jar,\
                lib/commons-codec-1.2.jar,\
@@ -40,6 +63,7 @@ bin.includes = library.jar,\
                lib/gt-jdbc-2.6-SNAPSHOT.jar,\
                lib/gt-main-2.6-SNAPSHOT.jar,\
                lib/gt-metadata-2.6-SNAPSHOT.jar,\
+               lib/gt-mif-2.6-SNAPSHOT.jar,\
                lib/gt-mysql-2.6-SNAPSHOT.jar,\
                lib/gt-oracle-spatial-2.6-SNAPSHOT.jar,\
                lib/gt-postgis-2.6-SNAPSHOT.jar,\
@@ -62,19 +86,25 @@ bin.includes = library.jar,\
                lib/gt-xsd-wps-2.6-SNAPSHOT.jar,\
                lib/h2-1.0-20070319.231009-1.jar,\
                lib/hsqldb-1.8.0.7.jar,\
-               lib/imageio-ext-arcgrid-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-customstreams-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdal-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdaldted-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalecw-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalecwjp2-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalerdasimg-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalframework-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalkakadujp2-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalmrsid-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalmrsidjp2-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-gdalnitf-1.0-SNAPSHOT.jar,\
-               lib/imageio-ext-imagereadmt-1.0-SNAPSHOT.jar,\
+               lib/imageio-ext-arcgrid-1.0.1.jar,\
+               lib/imageio-ext-customstreams-1.0.1.jar,\
+               lib/imageio-ext-gdal-1.0.1.jar,\
+               lib/imageio-ext-gdaldted-1.0.1.jar,\
+               lib/imageio-ext-gdalecw-1.0.1.jar,\
+               lib/imageio-ext-gdalecwjp2-1.0.1.jar,\
+               lib/imageio-ext-gdalehdr-1.0.1.jar,\
+               lib/imageio-ext-gdalerdasimg-1.0.1.jar,\
+               lib/imageio-ext-gdalframework-1.0.1.jar,\
+               lib/imageio-ext-gdalkakadujp2-1.0.1.jar,\
+               lib/imageio-ext-gdalmrsid-1.0.1.jar,\
+               lib/imageio-ext-gdalmrsidjp2-1.0.1.jar,\
+               lib/imageio-ext-gdalnitf-1.0.1.jar,\
+               lib/imageio-ext-geocore-1.0.1.jar,\
+               lib/imageio-ext-imagereadmt-1.0.1.jar,\
+               lib/imageio-ext-utilities-1.0.1.jar,\
+               lib/jai_codec-1.1.3.jar,\
+               lib/jai_core-1.1.3.jar,\
+               lib/jai_imageio-1.1.jar,\
                lib/jaxb-impl-1.3.jar,\
                lib/jdom-1.0.jar,\
                lib/jsqlparser-0.3.14.jar,\
@@ -94,18 +124,7 @@ bin.includes = library.jar,\
                lib/xml-apis-1.0.b2.jar,\
                lib/xml-apis-xerces-2.7.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar,\
-               lib/batik-dom-1.6.jar,\
-               lib/batik-bridge-1.6.jar,\
-               lib/batik-css-1.6.jar,\
-               lib/batik-ext-1.6.jar,\
-               lib/batik-gvt-1.6.jar,\
-               lib/batik-parser-1.6.jar,\
-               lib/batik-svg-dom-1.6.jar,\
-               lib/batik-xml-1.6.jar,\
-               lib/batik-awt-util-1.6.jar,\
-               lib/batik-script-1.6.jar,\
-               lib/gt-mif-2.6-SNAPSHOT.jar
+               lib/xpp3-1.1.3.4.O.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
