--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-SNAPSHOT.jar" sourcepath="C:/java/geoapi/trunk/geoapi-pending/src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
@@ -24,9 +26,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.1.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.0.3.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-pool-1.3.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.2-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/trunk/modules/library/api/src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
