--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -28,7 +28,6 @@ bin.includes = library.jar,\
                lib/commons-lang-2.1.jar,\
                lib/commons-logging-1.0.3.jar,\
                lib/commons-pool-1.3.jar,\
-               lib/geoapi-2.2-SNAPSHOT.jar,\
                lib/google-collect-snapshot-20080321.jar,\
                lib/gt-api-2.6-SNAPSHOT.jar,\
                lib/gt-arcgrid-2.6-SNAPSHOT.jar,\
@@ -107,7 +106,9 @@ bin.includes = library.jar,\
                lib/xml-apis-1.0.b2.jar,\
                lib/xml-apis-xerces-2.7.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/geoapi-2.3-SNAPSHOT.jar,\
+               lib/geoapi-pending-2.3-SNAPSHOT.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
