fix for UDIG-1188 allowing geometry name to be specified from the UI; also updated the styleConfigurator extension point description
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31162 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.style.sld/plugin.properties
+++ b/plugins/net.refractions.udig.style.sld/plugin.properties
@@ -11,7 +11,9 @@ text.label=Text
 polygon.label=Polygon
 point.label=Point
 raster.label=Raster
-simpleStyle.label=Simple
-simpleRaster.label=Simple
+simpleStyle.label=Simple Feature
+simpleRaster.label=Simple Raster
+simple.label=Simple
+simpleWMS.label=Simple WMS
 themePage.label=Theme
 xmlPage.label=XML
