--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -44,7 +44,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/trunk/modules/library/main/src/main/java"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-mif-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-mysql-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
