--- a/plugins/net.refractions.udig.mapgraphic/plugin.properties
+++ b/plugins/net.refractions.udig.mapgraphic/plugin.properties
@@ -1,9 +1,9 @@
 plugin.name=Map Graphic Plug-in
-extensionPoint.name=Map Graphic
-renderer.name=Map Graphic Renderer
-extension.name=Map Graphic Service Extension
-mapGraphic.wizardPageName=Map Graphic
-mapGraphic.wizardPageDescription=Add a graphic to the map.
+extensionPoint.name=Map Decoration
+renderer.name=Map Decoration Renderer
+extension.name=Map Decoration Service Extension
+mapGraphic.wizardPageName=Map Decoration
+mapGraphic.wizardPageDescription=Add a decoration to the map.
 action.other.name=Other...
 printing.ui.locationStyle.name = Location Style
 printing.ui.scalebar.config.label = Scalebar
