--- a/plugins/net.refractions.udig/plugin.xml
+++ b/plugins/net.refractions.udig/plugin.xml
@@ -7,7 +7,7 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="net.refractions.udig.ui.application"
-            name="uDig SDK">
+            name="%product.name">
          <property
                name="windowImages"
                value="icons/icon16.gif,icons/icon32.gif,icons/icon64.gif,icons/icon128.gif">
@@ -34,7 +34,7 @@
          </property>
          <property
                name="appName"
-               value="uDig SDK">
+               value="%product.name">
          </property>
          <property
                name="preferenceCustomization"
