fix for http://jira.codehaus.org/browse/UDIG-1101 + now a preferences page is available to chose the language of the gui and the memory to use.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31182 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.ui/plugin.xml
+++ b/plugins/net.refractions.udig.ui/plugin.xml
@@ -44,6 +44,15 @@
                id="charset">
          </keywordReference>
       </page>
+      <page
+            category="net.refractions.udig.ui.page.general"
+            class="net.refractions.udig.ui.preferences.RunntimePreferences"
+            id="net.refractions.udig.ui.runntimepreferences"
+            name="%runntimePreferences">
+         <keywordReference
+               id="charset">
+         </keywordReference>
+      </page>
        </extension>
    <extension
          id="application"
