implemented the ExportProjectWizard. The wizard has a simple directory selection page for the user to specify the destination. It should work when selecting multiple projects as well.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31204 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -707,6 +707,14 @@
            %selectionExport.desc
         </description>
      </wizard>
+     <wizard
+           class="net.refractions.udig.project.ui.wizard.export.project.ExportProjectWizard"
+           id="net.refractions.udig.project.ui.export.project"
+           name="Export Project">
+        <description>
+           Export selected project to specified location
+        </description>
+     </wizard>
    </extension>
    <extension
          point="net.refractions.udig.project.ui.toolManagers">
