added icon for Export Project
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31252 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -709,6 +709,7 @@
      </wizard>
      <wizard
            class="net.refractions.udig.project.ui.wizard.export.project.ExportProjectWizard"
+           icon="icons/etool16/exportproject_wiz.png"
            id="net.refractions.udig.project.ui.export.project"
            name="Export Project">
         <description>
