--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -28,6 +28,8 @@ bin.includes = library.jar,\
                lib/commons-lang-2.1.jar,\
                lib/commons-logging-1.0.3.jar,\
                lib/commons-pool-1.3.jar,\
+               lib/geoapi-2.3-SNAPSHOT.jar,\
+               lib/geoapi-pending-2.3-SNAPSHOT.jar,\
                lib/google-collect-snapshot-20080321.jar,\
                lib/gt-api-2.6-SNAPSHOT.jar,\
                lib/gt-arcgrid-2.6-SNAPSHOT.jar,\
@@ -35,13 +37,11 @@ bin.includes = library.jar,\
                lib/gt-brewer-2.6-SNAPSHOT.jar,\
                lib/gt-coverage-2.6-SNAPSHOT.jar,\
                lib/gt-cql-2.6-SNAPSHOT.jar,\
-               lib/gt-data-2.6-SNAPSHOT.jar,\
                lib/gt-db2-2.6-SNAPSHOT.jar,\
                lib/gt-epsg-hsql-2.6-SNAPSHOT.jar,\
                lib/gt-geotiff-2.6-SNAPSHOT.jar,\
                lib/gt-gml-2.6-SNAPSHOT.jar,\
                lib/gt-graph-2.6-SNAPSHOT.jar,\
-               lib/gt-h2-2.6-SNAPSHOT.jar,\
                lib/gt-image-2.6-SNAPSHOT.jar,\
                lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar,\
                lib/gt-imagemosaic-2.6-SNAPSHOT.jar,\
@@ -85,6 +85,7 @@ bin.includes = library.jar,\
                lib/imageio-ext-gdalnitf-1.0.1.jar,\
                lib/imageio-ext-geocore-1.0.1.jar,\
                lib/imageio-ext-imagereadmt-1.0.1.jar,\
+               lib/imageio-ext-tiff-1.0.2.jar,\
                lib/imageio-ext-utilities-1.0.1.jar,\
                lib/jaxb-impl-1.3.jar,\
                lib/jdom-1.0.jar,\
@@ -100,15 +101,11 @@ bin.includes = library.jar,\
                lib/picocontainer-1.2.jar,\
                lib/postgis-driver-1.0.jar,\
                lib/postgresql-8.1-407.jdbc3.jar,\
-               lib/spatialdbbox-1.0-20080125.182527-5.jar,\
                lib/vecmath-1.3.1.jar,\
                lib/xml-apis-1.0.b2.jar,\
                lib/xml-apis-xerces-2.7.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar,\
-               lib/geoapi-2.3-SNAPSHOT.jar,\
-               lib/geoapi-pending-2.3-SNAPSHOT.jar,\
-               lib/h2-1.0-20090420.064039-2.jar
+               lib/xpp3-1.1.3.4.O.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
