--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -1,13 +1,14 @@
 # Update URL used to fetch GeoTools jars
 # (and several other open source projects)
 
-updateURL=http://download.osgeo.org/webdav/geotools
+# used for stable releases
+updateStableURL=http://download.osgeo.org/webdav/geotools
+
+# used for snapshot releases
+updateSnapshotURL=http://repo.opengeo.org
 
 # older update url from refractions
 # updateURL=http://lists.refractions.net/m2
-
-# A repository in Europe that may work for you
-# updateURL=http://maven.geotools.fr/repository/
 
 # Ibiblio Mirrors used to fetch Apache jars
 # (and several other open source projects)
