--- a/plugins/net.refractions.udig.libs/copy.properties
+++ b/plugins/net.refractions.udig.libs/copy.properties
@@ -28,3 +28,4 @@ mirror=http://mirrors.ibiblio.org/pub/mirrors/maven2
 repo=file:///${user.home}/.m2/repository
 
 geotools.version=2.6-SNAPSHOT
+geoapi.version=2.3-M1
