--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -115,5 +115,4 @@ src.includes = readme.txt,\
                copy.properties,\
                build.properties,\
                .externalToolBuilders/,\
-               LICENSE.txt,\
-               log4j/
+               LICENSE.txt
