--- a/plugins/net.refractions.udig/plugin.xml
+++ b/plugins/net.refractions.udig/plugin.xml
@@ -7,7 +7,7 @@
          point="org.eclipse.core.runtime.products">
       <product
             application="net.refractions.udig.ui.application"
-            name="uDig SDK">
+            name="uDig">
          <property
                name="windowImages"
                value="icons/icon16.gif,icons/icon32.gif,icons/icon64.gif,icons/icon128.gif">
