UDIG-1521, update the arcsde plugin to the latest geotools arcsde module needs
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31279 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.arcsde/build.properties
+++ b/plugins/net.refractions.udig.catalog.arcsde/build.properties
@@ -8,8 +8,9 @@ bin.includes = plugin.xml,\
                plugin_es.properties,\
                plugin_fr.properties,\
                lib/,\
-               lib/jsde_sdk-XX.jar,\
-               lib/jsde-jpe-XX.jar,\
+               lib/jsde_sdk-9.2+.jar,\
+               lib/jpe_sdk-9.2+.jar,\
+               lib/icu4j-3.2+.jar,\
                .,\
                plugin_it.properties,\
                plugin_ko.properties
