--- a/plugins/net.refractions.udig.catalog.arcsde/.classpath
+++ b/plugins/net.refractions.udig.catalog.arcsde/.classpath
@@ -3,7 +3,8 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="lib/jsde_sdk-XX.jar" sourcepath="net.refractions.udig.catalog.arcsdesrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/jsde-jpe-XX.jar" sourcepath="net.refractions.udig.catalog.arcsdesrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/jsde_sdk-9.2+.jar" sourcepath="net.refractions.udig.catalog.arcsdesrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/jpe_sdk-9.2+.jar" sourcepath="net.refractions.udig.catalog.arcsdesrc.zip"/>
+    <classpathentry exported="true" kind="lib" path="lib/icu4j-3.2+.jar" sourcepath="net.refractions.udig.catalog.arcsdesrc.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
