--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -24,13 +24,15 @@
 	<classpathentry exported="true" kind="lib" path="lib/commons-lang-2.1.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-logging-1.0.3.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/commons-pool-1.3.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/eastwood-1.1.1-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-2.3-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/geoapi-pending-2.3-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/google-collect-snapshot-20080321.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/trunk/modules/library/api/src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-api-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcgrid-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-arcsde-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-brewer-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-charts-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-coverage-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-cql-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-db2-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
@@ -42,7 +44,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar" sourcepath="C:/java/geotools/trunk/modules/library/main/src/main/java"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-main-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-metadata-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-mif-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-mysql-2.6-SNAPSHOT.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
@@ -84,7 +86,9 @@
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-tiff-1.0.2.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/imageio-ext-utilities-1.0.2.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/jaxb-impl-1.3.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/jcommon-1.0.16.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/jdom-1.0.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
+	<classpathentry exported="true" kind="lib" path="lib/jfreechart-1.0.13.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsqlparser-0.3.14.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsr-275-1.0-beta-2.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/jsr305-1.3.2.jar" sourcepath="net.refractions.udig.libssrc.zip"/>
