--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -7,6 +7,8 @@ bin.includes = library.jar,\
                META-INF/,\
                LICENSE.txt,\
                plugin_ko.properties,\
+               lib/commons-httpclient-3.0.1.jar,\
+               lib/jts-1.9.jar,\
                lib/batik-awt-util-1.6.jar,\
                lib/batik-bridge-1.6.jar,\
                lib/batik-css-1.6.jar,\
@@ -23,11 +25,12 @@ bin.includes = library.jar,\
                lib/commons-codec-1.2.jar,\
                lib/commons-collections-3.1.jar,\
                lib/commons-dbcp-1.2.2.jar,\
-               lib/commons-httpclient-3.0.1.jar,\
+               lib/commons-httpclient-3.1.jar,\
                lib/commons-jxpath-1.2.jar,\
                lib/commons-lang-2.1.jar,\
                lib/commons-logging-1.0.3.jar,\
                lib/commons-pool-1.3.jar,\
+               lib/eastwood-1.1.1-SNAPSHOT.jar,\
                lib/geoapi-2.3-SNAPSHOT.jar,\
                lib/geoapi-pending-2.3-SNAPSHOT.jar,\
                lib/google-collect-snapshot-20080321.jar,\
@@ -35,6 +38,7 @@ bin.includes = library.jar,\
                lib/gt-arcgrid-2.6-SNAPSHOT.jar,\
                lib/gt-arcsde-2.6-SNAPSHOT.jar,\
                lib/gt-brewer-2.6-SNAPSHOT.jar,\
+               lib/gt-charts-2.6-SNAPSHOT.jar,\
                lib/gt-coverage-2.6-SNAPSHOT.jar,\
                lib/gt-cql-2.6-SNAPSHOT.jar,\
                lib/gt-db2-2.6-SNAPSHOT.jar,\
@@ -88,11 +92,13 @@ bin.includes = library.jar,\
                lib/imageio-ext-tiff-1.0.2.jar,\
                lib/imageio-ext-utilities-1.0.2.jar,\
                lib/jaxb-impl-1.3.jar,\
+               lib/jcommon-1.0.16.jar,\
                lib/jdom-1.0.jar,\
+               lib/jfreechart-1.0.13.jar,\
                lib/jsqlparser-0.3.14.jar,\
                lib/jsr-275-1.0-beta-2.jar,\
                lib/jsr305-1.3.2.jar,\
-               lib/jts-1.9.jar,\
+               lib/jts-1.10.jar,\
                lib/mysql-connector-java-5.1.5.jar,\
                lib/net.opengis.ows-2.6-SNAPSHOT.jar,\
                lib/net.opengis.wfs-2.6-SNAPSHOT.jar,\
