--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -9,6 +9,7 @@ bin.includes = library.jar,\
                plugin_ko.properties,\
                lib/commons-httpclient-3.0.1.jar,\
                lib/jts-1.9.jar,\
+               epsg.properties,\
                lib/batik-awt-util-1.6.jar,\
                lib/batik-bridge-1.6.jar,\
                lib/batik-css-1.6.jar,\
@@ -37,10 +38,12 @@ bin.includes = library.jar,\
                lib/gt-api-2.6-SNAPSHOT.jar,\
                lib/gt-arcgrid-2.6-SNAPSHOT.jar,\
                lib/gt-arcsde-2.6-SNAPSHOT.jar,\
+               lib/gt-arcsde-common-2.6-SNAPSHOT.jar,\
                lib/gt-brewer-2.6-SNAPSHOT.jar,\
                lib/gt-charts-2.6-SNAPSHOT.jar,\
                lib/gt-coverage-2.6-SNAPSHOT.jar,\
                lib/gt-cql-2.6-SNAPSHOT.jar,\
+               lib/gt-data-2.6-SNAPSHOT.jar,\
                lib/gt-db2-2.6-SNAPSHOT.jar,\
                lib/gt-epsg-hsql-2.6-SNAPSHOT.jar,\
                lib/gt-geotiff-2.6-SNAPSHOT.jar,\
@@ -74,23 +77,23 @@ bin.includes = library.jar,\
                lib/gt-xsd-wfs-2.6-SNAPSHOT.jar,\
                lib/gt-xsd-wps-2.6-SNAPSHOT.jar,\
                lib/hsqldb-1.8.0.7.jar,\
-               lib/imageio-ext-arcgrid-1.0.2.jar,\
-               lib/imageio-ext-customstreams-1.0.2.jar,\
-               lib/imageio-ext-gdal-bindings-1.4.4.jar,\
-               lib/imageio-ext-gdaldted-1.0.2.jar,\
-               lib/imageio-ext-gdalecw-1.0.2.jar,\
-               lib/imageio-ext-gdalecwjp2-1.0.2.jar,\
-               lib/imageio-ext-gdalehdr-1.0.2.jar,\
-               lib/imageio-ext-gdalerdasimg-1.0.2.jar,\
-               lib/imageio-ext-gdalframework-1.0.2.jar,\
-               lib/imageio-ext-gdalkakadujp2-1.0.2.jar,\
-               lib/imageio-ext-gdalmrsid-1.0.2.jar,\
-               lib/imageio-ext-gdalmrsidjp2-1.0.2.jar,\
-               lib/imageio-ext-gdalnitf-1.0.2.jar,\
-               lib/imageio-ext-geocore-1.0.2.jar,\
-               lib/imageio-ext-imagereadmt-1.0.2.jar,\
-               lib/imageio-ext-tiff-1.0.2.jar,\
-               lib/imageio-ext-utilities-1.0.2.jar,\
+               lib/imageio-ext-arcgrid-1.0.3.jar,\
+               lib/imageio-ext-customstreams-1.0.3.jar,\
+               lib/imageio-ext-gdal-bindings-1.4.5.jar,\
+               lib/imageio-ext-gdaldted-1.0.3.jar,\
+               lib/imageio-ext-gdalecw-1.0.3.jar,\
+               lib/imageio-ext-gdalecwjp2-1.0.3.jar,\
+               lib/imageio-ext-gdalehdr-1.0.3.jar,\
+               lib/imageio-ext-gdalerdasimg-1.0.3.jar,\
+               lib/imageio-ext-gdalframework-1.0.3.jar,\
+               lib/imageio-ext-gdalkakadujp2-1.0.3.jar,\
+               lib/imageio-ext-gdalmrsid-1.0.3.jar,\
+               lib/imageio-ext-gdalmrsidjp2-1.0.3.jar,\
+               lib/imageio-ext-gdalnitf-1.0.3.jar,\
+               lib/imageio-ext-geocore-1.0.3.jar,\
+               lib/imageio-ext-imagereadmt-1.0.3.jar,\
+               lib/imageio-ext-tiff-1.0.3.jar,\
+               lib/imageio-ext-utilities-1.0.3.jar,\
                lib/jaxb-impl-1.3.jar,\
                lib/jcommon-1.0.16.jar,\
                lib/jdom-1.0.jar,\
