now can import many layers into catalog at once
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31310 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.catalog.ui/plugin.xml
+++ b/plugins/net.refractions.udig.catalog.ui/plugin.xml
@@ -326,8 +326,9 @@
   <extension
         point="net.refractions.udig.ui.dropAction">
         <action
-           class="net.refractions.udig.catalog.internal.ui.actions.CatalogImportDropAction"
-           name="%import.action.name">
+              class="net.refractions.udig.catalog.internal.ui.actions.CatalogImportDropAction"
+              enablesFor="+"
+              name="%import.action.name">
 	       <acceptedType class="java.net.URL"/>
 	       <acceptedType class="java.lang.String"/>
 	       <acceptedType class="java.io.File"/>
