added type qualifier to ID
pushed the use of ID much much farther

changed API for finding resources in the catalog

git-svn-id: http://svn.refractions.net/udig/udig/trunk@31328 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -36,7 +36,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/gt-data-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-db2-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-epsg-hsql-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar" sourcepath="/net.refractions.udig.libs.source/src/net.refractions.udig.libs_1.2.0/lib/gt-geotiff-2.6-SNAPSHOTsrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-gml-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar"/>
