--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -39,7 +39,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/gt-geotiff-2.6-SNAPSHOT.jar" sourcepath="/net.refractions.udig.libs.source/src/net.refractions.udig.libs_1.2.0/lib/gt-geotiff-2.6-SNAPSHOTsrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-gml-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-graph-2.6-SNAPSHOT.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gt-image-2.6-SNAPSHOT.jar" sourcepath="/net.refractions.udig.libs.source/src/net.refractions.udig.libs_1.2.0/lib/gt-image-2.6-SNAPSHOTsrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-imageio-ext-gdal-2.6-SNAPSHOT.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-imagemosaic-2.6-SNAPSHOT.jar" sourcepath="/net.refractions.udig.libs.source/src/net.refractions.udig.libs_1.2.0/lib/gt-shapefile-2.6-SNAPSHOTsrc.zip"/>
 	<classpathentry exported="true" kind="lib" path="lib/gt-jdbc-2.6-SNAPSHOT.jar"/>
