started enhancing the printing system. Added box zorder changing.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31333 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.xml
+++ b/plugins/net.refractions.udig.printing.ui/plugin.xml
@@ -184,6 +184,30 @@
                 id="refreshAction"
                 name="%refreshAction.label">
           </editAction>
+          <editAction
+                class="net.refractions.udig.printing.ui.internal.editor.BringToFrontAction"
+                id="bringtofrontAction"
+                image="icons/obj16/bringtofront.png"
+                name="%bringtofrontAction.label">
+          </editAction>
+          <editAction
+                class="net.refractions.udig.printing.ui.internal.editor.BringForwardAction"
+                id="bringforwardAction"
+                image="icons/obj16/bringforward.png"
+                name="%bringforwardAction.label">
+          </editAction>
+          <editAction
+                class="net.refractions.udig.printing.ui.internal.editor.BringBackwardAction"
+                id="bringbackwardAction"
+                image="icons/obj16/bringbackward.png"
+                name="%bringbackwardAction.label">
+          </editAction>
+          <editAction
+                class="net.refractions.udig.printing.ui.internal.editor.BringToBackAction"
+                id="bringtobackAction"
+                image="icons/obj16/bringtoback.png"
+                name="%bringtobackAction.label">
+          </editAction>
        </editActionGroup>
      </extension>
 </plugin>
