solved problem for which the maps part of the printer page are shown as duplicated maps in the project view. Also after deleting the printer page they were not removed from the projects view.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31340 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.xml
+++ b/plugins/net.refractions.udig.printing.ui/plugin.xml
@@ -17,6 +17,11 @@
             id="net.refractions.udig.printing.ui.template.basic"
             name="Basic Template">
       </template>
+      <template
+            class="net.refractions.udig.printing.ui.internal.template.A4LandscapeTemplate"
+            id="net.refractions.udig.printing.ui.internal.template.A4LandscapeTemplate"
+            name="A4 lanscape template">
+      </template>
    </extension>
    
    <extension
