changed hole command so that it is not ran as a Nav command
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31341 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -856,7 +856,7 @@
                class="net.refractions.udig.project.ui.operations.SyncProjection"
                enablesFor="1"
                id="net.refractions.udig.project.ui.syncProjection"
-               name="Synchronize Projection"
+               name="Set Map Projection From Layer"
                targetClass="net.refractions.udig.project.ILayer">
          </operation>      
  	</extension>
