removing of override annotations
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31352 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.xml
+++ b/plugins/net.refractions.udig.printing.ui/plugin.xml
@@ -56,11 +56,12 @@
    <extension
          point="org.eclipse.ui.editors">
          <editor
-            icon="icons/obj16/page_obj.gif"
-            class="net.refractions.udig.printing.ui.internal.editor.PageEditor"
-            default="true"
-            name="%printing.ui.pageEditor.name"
-            id="net.refractions.udig.printing.ui.internal.editor.pageEditor"/>
+               class="net.refractions.udig.printing.ui.internal.editor.PageEditor"
+               contributorClass="net.refractions.udig.printing.ui.internal.editor.PageEditorActionBarContributor"
+               default="true"
+               icon="icons/obj16/page_obj.gif"
+               id="net.refractions.udig.printing.ui.internal.editor.pageEditor"
+               name="%printing.ui.pageEditor.name"/>
    </extension>
    <extension
          point="net.refractions.udig.project.ui.editorInputs">
