Fixed move multiple maps at once and drag and drop multiple services on project at once (to create map with many layer)
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31356 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin.properties
+++ b/plugins/net.refractions.udig.project.ui/plugin.properties
@@ -222,3 +222,4 @@ exportToImage.name = Map to Image
 exportToImage.desc = Exports selected maps to World+Image files or a PDF.  The exported images are added to the catalog.
 
 Layer.Name =  Layer
+MoveMapAction.name = Move Map
