working expression viewer; added dependency to miglayout
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31358 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.libs/.classpath
+++ b/plugins/net.refractions.udig.libs/.classpath
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/miglayout-3.7.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-awt-util-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-bridge-1.6.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/batik-css-1.6.jar"/>
