--- a/plugins/net.refractions.udig.libs/build.properties
+++ b/plugins/net.refractions.udig.libs/build.properties
@@ -114,7 +114,8 @@ bin.includes = library.jar,\
                lib/xml-apis-1.0.b2.jar,\
                lib/xml-apis-xerces-2.7.1.jar,\
                lib/xmlrpc-2.0.jar,\
-               lib/xpp3-1.1.3.4.O.jar
+               lib/xpp3-1.1.3.4.O.jar,\
+               lib/miglayout-3.7.jar
 jars.compile.order = library.jar
 source.library.jar = src/
 output.library.jar = bin/
