Fixes for: - Open Map action missing (tupi) - missing label on "add attributes" in create layer - cancel in delete project removed anyway
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31364 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui.editor/plugin.properties
+++ b/plugins/net.refractions.udig.project.ui.editor/plugin.properties
@@ -222,3 +222,5 @@ exportToImage.name = Map to Image
 exportToImage.desc = Exports selected maps to World+Image files or a PDF.  The exported images are added to the catalog.
 
 Layer.Name =  Layer
+
+map.action.open.name    = Open Map
