Now can DND multiple layers for move
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31367 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.project.ui/plugin.xml
+++ b/plugins/net.refractions.udig.project.ui/plugin.xml
@@ -406,6 +406,7 @@
      </action>
      <action
            class="net.refractions.udig.project.ui.internal.actions.LayerDropAction"
+           enablesFor="+"
            name="%LayerDropAction.name">
         <destination class="net.refractions.udig.project.ILayer"/>
         <acceptedType class="net.refractions.udig.project.ILayer"/>
