fixed font on LabelBox problems. Now font scales properly between page and paper.
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31383 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin.properties
@@ -52,3 +52,18 @@ scaleAction.label = Set Scale
 setGraphicAction.label = Select Graphic
 
 styleAction.label = Change Style
+
+
+A4.landscape.template=A4 landscape template
+A3.landscape.template=A3 landscape template
+A1.landscape.template=A1 landscape template
+A0.landscape.template=A0 landscape template
+A4.portrait.template=A4 portrait template
+A3.portrait.template=A3 portrait template
+A1.portrait.template=A1 portrait template
+A0.portrait.template=A0 portrait template
+Letter.landscape.template=Letter landscape template
+Legal.landscape.template=Legal landscape template
+Letter.portrait.template=Letter portrait template
+Legal.portrait.template=Legal portrait template
+
