rectangles, roundrectangles and ellipse in the printing page
git-svn-id: http://svn.refractions.net/udig/udig/trunk@31394 e5c1c795-43da-0310-a71f-fac65c449510

--- a/plugins/net.refractions.udig.printing.ui/plugin.properties
+++ b/plugins/net.refractions.udig.printing.ui/plugin.properties
@@ -67,3 +67,8 @@ Legal.landscape.template=Legal landscape template
 Letter.portrait.template=Letter portrait template
 Legal.portrait.template=Legal portrait template
 
+box.box.printer = Box or Circle
+box.box.printer.description = Draw a rectangular or elliptic shape 
+
+simplestyle.label = Change style
+
